--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "12.0.7",
+    "next-with-apollo": "^5.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-moment": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
